k8s/budgetelier-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budgetelier
  labels:
    app: budgetelier
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: budgetelier
  template:
    metadata:
      labels:
        app: budgetelier
    spec:
      containers:
      - name: budgetelier
        image: budgetelier:1.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: data
          mountPath: /data
        readinessProbe:
          httpGet:
            path: /
            port: 5000
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: budgetelier-pvc
