k8s/budgetelier-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: budgetelier-svc
spec:
  selector:
    app: budgetelier
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
