k8s/budgetelier-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: budgetelier-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: budgetelier.local
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: budgetelier-svc
            port:
              number: 80
